# rust-discord-bot

./: Cargo.toml  README.md
src/: config.rs  main.rs  utils.rs
src/commands/: mod.rs  ping.rs
